@@ -417,6 +417,8 @@ public class MipTypes : global::System.IDisposable {
     CH_FIELD_ESTFILTER_ODOMETER_SCALE_FACTOR_ERROR = 0x8247,
     CH_FIELD_ESTFILTER_ODOMETER_SCALE_FACTOR_ERROR_UNCERT = 0X8248,
     CH_FIELD_ESTFILTER_GNSS_DUAL_ANTENNA_STATUS = 0x8249,
+    CH_FIELD_ESTFILTER_FRAME_CONFIG_ERROR = 0X8250,
+    CH_FIELD_ESTFILTER_FRAME_CONFIG_ERROR_UNCERT = 0x8251,
     CH_FIELD_ESTFILTER_SHARED_EVENT_SOURCE = 0x82D0,
     CH_FIELD_ESTFILTER_SHARED_TICKS = 0x82D1,
     CH_FIELD_ESTFILTER_SHARED_DELTA_TICKS = 0x82D2,
